fix(home-seek): increase max-width on mobile title

--- a/src/css/pages/home.scss
+++ b/src/css/pages/home.scss
@@ -714,7 +714,7 @@
   &__title {
     margin-left: auto;
 
-    max-width: rem(320);
+    max-width: rem(340);
     text-align: right;
 
     @media only screen and (min-width: rem(500)) {
